<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#434343"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView"
        app:layout_constraintVertical_bias="0.95"
        tools:layout_editor_absoluteX="59dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/underrootBTN"

                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="underrootBTN"
                android:text="@string/underroot"
                android:textColor="#FFF500"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/piBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="piBTN"
                android:text="@string/pi"
                android:textColor="#FFF500"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/exponentBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="exponentBTN"
                android:text="@string/exponent"
                android:textColor="#FFF500"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/eBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="eBTN"
                android:text="@string/e"
                android:textAllCaps="false"
                android:textColor="#FFF500"
                app:backgroundTint="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:backgroundTint="#FFF500"
                android:fontFamily="sans-serif-medium"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/parenthesesBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:backgroundTint="#E6E6E6"
                android:fontFamily="sans-serif-medium"
                android:onClick="parenthesesBTN"
                android:text="@string/parentheses"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/percentageBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:backgroundTint="#E6E6E6"
                android:fontFamily="sans-serif-medium"
                android:onClick="percentageBTN"
                android:text="@string/percentage"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/divideBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:backgroundTint="#E6E6E6"
                android:fontFamily="sans-serif-medium"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="sans-serif-medium"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="sans-serif-medium"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/nineBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="sans-serif-medium"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/multiplyBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:backgroundTint="#E6E6E6"
                android:fontFamily="sans-serif-medium"
                android:onClick="multiplyBTN"
                android:text="@string/multiply"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="sans-serif-medium"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="sans-serif-medium"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="sans-serif-medium"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/subtractBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:backgroundTint="#E6E6E6"
                android:fontFamily="sans-serif-medium"
                android:onClick="subtractBTN"
                android:text="@string/subtract"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="sans-serif-medium"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="sans-serif-medium"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="sans-serif-medium"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/addBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:backgroundTint="#E6E6E6"
                android:fontFamily="sans-serif-medium"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="sans-serif-medium"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/pointBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="sans-serif-medium"
                android:onClick="pointBTN"
                android:text="@string/point"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/backspaceBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="sans-serif-medium"
                android:onClick="backspaceBTN"
                android:text="@string/backspace"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/equalsBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:height="80dp"
                android:background="@drawable/buttonbg"
                android:backgroundTint="#FFF500"
                android:fontFamily="sans-serif-medium"
                android:onClick="equalsBTN"
                android:text="@string/equals"
                android:textColor="#434343"
                android:textSize="24sp"
                android:textStyle="normal"
                app:backgroundTint="@null" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/TextView"
        android:layout_width="387dp"
        android:layout_height="124dp"
        android:layout_marginTop="80dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />
</androidx.constraintlayout.widget.ConstraintLayout>